# fullstack_dev_crew

./: LICENSE  README.md
fullstack_dev_crew/: pyproject.toml
fullstack_dev_crew/backend/: .env.example  package.json  tsconfig.json
fullstack_dev_crew/backend/src/: server.ts
fullstack_dev_crew/backend/src/api/routes/: index.ts
fullstack_dev_crew/backend/src/db/: data-source.ts  index.ts
fullstack_dev_crew/backend/src/db/entities/: User.ts
fullstack_dev_crew/backend/src/middleware/: errorHandler.ts  index.ts
fullstack_dev_crew/backend/src/utils/: errors.ts
fullstack_dev_crew/docs/: architecture.md
fullstack_dev_crew/src/fullstack_dev_crew/: crew.py  main.py
fullstack_dev_crew/src/fullstack_dev_crew/config/: agents.yaml  tasks.yaml
